--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -19,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2"
   }
 }
