--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.17",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -21,6 +22,7 @@
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.2"
+    "mongoose": "^8.1.2",
+    "multer": "1.4.5-lts.1"
   }
 }
